[package]
name = "superhero-client"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spacetimedb-sdk = "1.0.1"
sqlx = { version = "0.8.3", features = ["postgres", "mysql", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["full"] }
